<resources>
    <string name="app_name">OdontoFact</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>

    <string name="title_section1" translatable="false">Section 1</string>
    <string name="title_section2" translatable="false">Section 2</string>
    <string name="title_section3" translatable="false">Section 3</string>

    <string name="navigation_drawer_open">Abrir navigation drawer</string>
    <string name="navigation_drawer_close">Cerrar navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="inicio">Inicio</string>

    <string name="usuario">Usuario</string>
    <string name="seccion_1">Seccion 1</string>
    <string name="seccion_2">Seccion 2</string>
    <string name="seccion_3">Seccion 3</string>
    <string name="opcion_1">Opción 1</string>
    <string name="opcion_2">Opción 2</string>
    <string name="otras_opciones">Consultas</string>

    <string name="fragment1">Fragmento 1</string>
    <string name="fragment2">Fragmento 2</string>
    <string name="fragment3">Fragmento 3</string>
    <string name="anyadir_paciente">Añadir Paciente</string>
    <string name="insertar_facturacion">Insertar Facturación</string>
    <string name="generar_factura_mensual">Generar factura mensual</string>
    <string name="title_activity_login">Registrarse</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Acceder</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">La dirección de correo es invalida</string>
    <string name="error_invalid_password">El password es demasiado corto</string>
    <string name="error_incorrect_password">El password es incorrecto</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="apellido1">Primer apellido</string>
    <string name="apellido2">Segundo apellido</string>
    <string name="numero_historia">Número de historia</string>
    <string name="nuevo_paciente">Nuevo paciente</string>
    <string name="error_campo_obligatorio">El campo es obligatorio</string>
    <string name="nombre">Nombre</string>
    <string name="paciente_label">Paciente:</string>
    <string name="tratamiento_label">Tratamiento</string>
    <string name="clinica_label">Clínica</string>
    <string name="label_euros" translatable="false">€</string>
    <string name="label_importe">Importe</string>
    <string name="importe_label">Importe</string>
    <string name="tipo_pago_label">Tipo de pago</string>
    <string name="anyadir_linea_pago">Añadir</string>
    <string name="observaciones_label">Observaciones</string>
    <string name="fecha_label">Fecha</string>
    <string name="generar_factura_excel">Generar Excel</string>
    <string name="generar_pdf">Generar PDF</string>
    <string name="consultar_pacientes">Consultar pacientes</string>
    <string name="buscar">Buscar</string>
    <string name="limpiar_formulario">Limpiar</string>
    <string name="importe_system">Importe System</string>
    <string name="importe_resitecnic">Importe Resitecnic</string>
    <string name="importe_ortodoncia">Importe Ortodoncia</string>
    <string name="mes">Mes</string>
    <string name="anyo">Año</string>
    <string name="enero">Enero</string>
    <string name="febrero">Febrero</string>
    <string name="marzo">Marzo</string>
    <string name="abril">Abril</string>
    <string name="mayo">Mayo</string>
    <string name="junio">Junio</string>
    <string name="julio">Julio</string>
    <string name="agosto">Agosto</string>
    <string name="septiembre">Septiembre</string>
    <string name="octubre">Octubre</string>
    <string name="noviembre">Noviembre</string>
    <string name="diciembre">Diciembre</string>
    <string name="insertar_gastos_lab">Insertar gastos de laboratorio</string>
    <string name="error_gastos_ya_existen">El mes y el año seleccionados ya están incluidos en base de datos</string>
    <string name="action_delete">Eliminar</string>
    <string name="toast_message_lineas_factura_ninguna_seleccionada">Debe seleccionar alguna linea de factura para eliminar</string>
    <string name="toast_message_lineas_factura_eliminadas">Se han eliminado las lineas de factura</string>
    <string name="toast_message_lineas_factura_error">Se ha producido un error eliminando las lineas de factura</string>
    <string name="excel_label_gastos_laboratorio">Gastos de laboratorio</string>
    <string name="excel_label_gastos_laboratorio_orto">Laboratorio de Ortodoncia</string>
    <string name="excel_label_gastos_laboratorio_resi">Laboratorio Resitecnic</string>
    <string name="excel_label_gastos_laboratorio_system">Laboratorio System</string>
    <string name="toast_message_no_hay_resultados">No hay resultados</string>
    <string name="total_factura">Total factura</string>
    <string name="total_factura_menos_siete_porciento">Total factura con retención ( 7% )</string>
    <string name="action_logout">Cerrar sesión</string>
    <string name="acerca_de">Acerca de...</string>
    <string name="acerca_de_texto">Este programa ha sido desarrollado como trabajo final de la asignatura Android Fundamentos. Ha sido realizado por Alberto Benetó.</string>
    <string name="pago_label">Pago</string>

</resources>
