<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_seccion_1"
            android:icon="@drawable/ic_menu"
            android:title="@string/anyadir_paciente" />
        <item
            android:id="@+id/menu_seccion_2"
            android:icon="@drawable/ic_menu"
            android:title="@string/insertar_facturacion" />
        <item
            android:id="@+id/menu_seccion_alta_gastos_lab"
            android:icon="@drawable/ic_menu"
            android:title="@string/insertar_gastos_lab" />
        <item
            android:id="@+id/menu_seccion_3"
            android:icon="@drawable/ic_menu"
            android:title="@string/generar_factura_mensual" />
    </group>

    <item
        android:id="@+id/navigation_subheader"
        android:title="@string/otras_opciones">
        <menu>
            <item
                android:id="@+id/menu_item_consultar_pacientes"
                android:icon="@drawable/ic_menu"
                android:title="@string/consultar_pacientes" />
        </menu>
    </item>
</menu>