<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/acerca_de"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/acerca_de"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="1"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/action_logout"
        app:showAsAction="never" />
    <item
        android:id="@+id/delete"
        android:orderInCategory="100"
        android:title="@string/action_delete"
        app:showAsAction="always"
        android:visible="true"
        android:icon="@android:drawable/ic_menu_delete">
    </item>
</menu>
